--- a/index.html
+++ b/index.html
@@ -5,8 +5,44 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Architects</title>
+    <!--------------Google Fonts-------------->
+    <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;500;700;800&display=swap" rel="stylesheet">
+    <!---------------StyleSheet--------------->
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <header class="container">
+        <div class="navigation">
+            <div class="nav-title">
+                <h2>G3 Architects</h2>
+            </div>
+            <div class="nav-item">
+                <nav>
+                    <ul>
+                        <li><a href="">Home</a></li>
+                        <li><a href="">About</a></li>
+                        <li><a href="">Services</a></li>
+                        <li><a href="">Contact Us</a></li>
+                        <li><a href="">Login</a></li>
+                    </ul>
+                </nav>
+            </div>
+        </div>
+    </header>
+    <!------------------------------->
+    <section class="container">
+        <div class="banner-container">
+            <div class="banner">
+                <div class="banner-detile">
+                    <h1 class="banner-title">Brand New <br>Group of Architects</h1>
+                    <p class="banner-info">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                    <button class="btn-primary">Explore More</button>
+                </div>
+                <div class="banner-image">
+                    <img src="./images/banner.png" alt="">
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
