--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+<!--------------------Navigation Section------------------>
     <header class="container">
         <div class="navigation">
             <div class="nav-title">
@@ -29,7 +30,7 @@
             </div>
         </div>
     </header>
-    <!------------------------------->
+<!----------------Banner section--------------->
     <section class="container">
         <div class="banner-container">
             <div class="banner">
@@ -44,5 +45,85 @@
             </div>
         </div>
     </section>
+<!------------------Features Section----------------->
+<section class="container">
+    <div class="fearures-container">
+        <div class="feature">
+            <div class="Feature-images">
+                <div class="image"><img src="./images/team1.png" alt=""></div>
+                <div class="image"><img src="./images/team2.png" alt=""></div>
+                <div class="image"><img src="./images/team3.png" alt=""></div>
+                <div class="image"><img src="./images/team4.png" alt=""></div>
+            </div>
+            <div class="Feature-detile">
+                <h2 class="feature-title">Quick list<span class="of-our">of Our</span><br><span class="title-color">Features</span></h2>
+                <p class="feature-info">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                <button class="btn-feature">Explore More</button>
+            </div>
+        </div>
+    </div>
+</section>
+<!---------------------Love & enjoy Section------------------>
+<section class="container">
+    <div class="love-container">
+        <div class="love-content">
+            <div class="love-info">
+                <h2 class="love-title">Features you will love & enjoy</h2>
+                <p class="love-discription">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+            </div>
+            <div class="love-detile">
+                <div class="enjoy-detile">
+                    <h3 class="enjoy-title">Dexktop & Mobile Version</h3>
+                    <p class="enjoy-discription">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                </div>
+                <div class="enjoy-detile">
+                    <h3 class="enjoy-title">Drag & Drop Builder</h3>
+                    <p class="enjoy-discription">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                </div>
+                <div class="enjoy-detile">
+                    <h3 class="enjoy-title">Awesome Modern Design</h3>
+                    <p class="enjoy-discription">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                </div>
+                <div class="enjoy-detile">
+                    <h3 class="enjoy-title">Super Easy to Edit</h3>
+                    <p class="enjoy-discription">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                </div>
+            </div>
+        </div>
+        <div class="love-images"><img src="./images/architect.png" alt=""></div>
+    </div>
+    <button class="btn-enjoy"><span>10+Year</span><br> Experience</button>
+</section>
+<!--------------------------Some Fact section---------------->
+<section class="container">
+    <div class="some-fact-container">
+        <div class="some-fact">
+            <h2 class="fact-title">Some Facts</h2>
+            <p class="fact-discription">There are many variations of passages of Lorem Ipsum available, but <br>the majority have suffered alteration.</p>
+        </div>
+        <div class="fact-animation">
+            <div class="animation">
+                <img src="./images/icons/ribon.png" alt="">
+                <h1>54</h1>
+                <p>Awards Winnings</p>
+            </div>
+            <div class="animation">
+                <img src="./images/icons/projects.png" alt="">
+                <h1>1458</h1>
+                <p>Project Finished</p>
+            </div>
+            <div class="animation">
+                <img src="./images/icons/customers.png" alt="">
+                <h1>590</h1>
+                <p>Clients Worked</p>
+            </div>
+            <div class="animation">
+                <img src="./images/icons/email.png" alt="">
+                <h1>22578</h1>
+                <p>Email Send</p>
+            </div>
+        </div>
+    </div>
+</section>
 </body>
 </html>
