--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
             <p class="fact-discription">There are many variations of passages of Lorem Ipsum available, but <br>the majority have suffered alteration.</p>
         </div>
         <div class="fact-animation">
-            <div class="animation">
+            <div class="animation-1">
                 <img src="./images/icons/ribon.png" alt="">
                 <h1>54</h1>
                 <p>Awards Winnings</p>
@@ -117,7 +117,7 @@
                 <h1>590</h1>
                 <p>Clients Worked</p>
             </div>
-            <div class="animation">
+            <div class="animation-2">
                 <img src="./images/icons/email.png" alt="">
                 <h1>22578</h1>
                 <p>Email Send</p>
@@ -125,5 +125,53 @@
         </div>
     </div>
 </section>
+<!----------------our Sponspors section------------->
+<section class="container">
+    <div class="sponspors-container">
+        <div class="sponspors">
+            <div class="sponspors-details">
+                <h1 class="sponspors-title">Our Sponspors</h1>
+                <p class="sponspors-info">There are many variations of passages of Lorem Ipsum available, but <br>the majority have suffered alteration.</p>
+            </div>
+            <div class="sponspors-list">
+                <div class="sponspors-image">
+                    <img src="./images/sponsors/spotify.png" alt="">
+                </div>
+                <div class="sponspors-image">
+                    <img src="./images/sponsors/amazon.png" alt="">
+                </div>
+                <div class="sponspors-image">
+                    <img src="./images/sponsors/google.png" alt="">
+                </div>
+                <div class="sponspors-image">
+                    <img src="./images/sponsors/telerama.png" alt="">
+                </div>
+                <div class="sponspors-image">
+                    <img src="./images/sponsors/figma.png" alt="">
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+<!-------------------------Footer section-------------------->
+<footer class="container">
+    <div class="footer-container">
+        <div class="footer">
+            <div class="footer-detile">
+                <h3 class="footer-title">G3 Architects</h3>
+                <p class="footer-info">All rights reserved copyright@2023 startup landing page design</p>
+                <p class="footer-info">All rights reserved</p>
+            </div>
+            <div class="social">
+                <ul>
+                    <li><a href=""><img src="./images/icons/facebook.png" alt=""></a></li>
+                    <li><a href=""><img src="./images/icons/twitter.png" alt=""></a></li>
+                    <li><a href=""><img src="./images/icons/insta.png" alt=""></a></li>
+                    <li><a href=""><img src="./images/icons/facebook.png" alt=""></a></li>
+                </ul>
+            </div>
+        </div>
+    </div>
+</footer>
 </body>
 </html>
